--- a/locale/pt_BR/locale.xml
+++ b/locale/pt_BR/locale.xml
@@ -7,10 +7,10 @@
   * Copyright (c) 2018 Vitaliy Bezsheiko
   * Distributed under the GNU GPL v3.
   *
-  * Localization strings
+  * Translated by Job Diógenes Ribeiro Borges
   -->
 
-<locale name="en_US" full_name="U.S. English">
+<locale name="pt_BR" full_name="Português Brasil">
     <message key="plugins.themes.oldGregg.name">Old Gregg Theme</message>
     <message key="plugins.themes.oldGregg.description">Este é um tema Bootstrap 4 para OJS 3 que usa o JATS Parser Plugin.</message>
     <message key="plugins.gregg.search-text">Pesquisar nesta publicação</message>
